--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div id="container">
             <header>
                 <a href="index.html"target="_blank">
-                <img src="images/uglymuglogo.png" alt="Mobile Logo" width="500px" height="400px">
+                <img src="uglymuglogo.png" alt="Mobile Logo" width="500px" height="400px">
                 </a>
             </header>
             <div class="cart">
